--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 :root {
   --main-color: #0b178f;
   --text-color: #1c2844;
+  --color-primary: green;
 }
 section {
     padding: 50px 10%;
@@ -179,6 +180,8 @@ font-weight: 500;
   font-weight: bolder;
   color: var(--main-color);
 }
+
+
 .services-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(17rem,1fr));
@@ -407,3 +410,111 @@ form .send-btn:hover {
   }
 }
 
+.wrapper{
+    position: relative;
+    width: 100%;
+    max-width: 500px;
+    background-color: #fff;
+    box-shadow: 10px 10px 10px -1px rgba(10,99, 169,0.16),
+    -10px -10px 10px -1px rgba(255,255,255,0.7);
+    padding: 40px 30px;
+    border-radius: 10px;
+    margin: 15px;
+}
+
+.wrapper h3{
+    font-size: 1.7rem;
+    text-align: left;
+}
+
+.skills-wrapper{
+    padding: 0 20px;
+}
+
+.skills-wrapper .bar{
+    margin: 20px 0;
+}
+
+.skills-wrapper .bar .info {
+    margin-bottom: 10px;
+}
+
+.skills-wrapper .bar .info span{
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.skills-wrapper .bar:hover {
+    background: var(--text-color);
+    color: #fff;
+    transition: 0.2s;
+}
+
+.skills-wrapper .bar:hover .bx {
+    background: #fff;
+    color: var(--text-color);
+    transition: 0.2s;
+}
+
+.skills-wrapper .bar .progress-bar{
+    width: 100%;
+    height: 15px;
+    background-color: #dddddd;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    transition: 0.2s;
+}
+
+.skills-wrapper .bar .progress-bar span{
+    position: absolute;
+    height: 100%;
+    border-radius: 10px;
+    width: 70%;
+    text-align: right;
+    color: white;
+    transform: scale(0);
+
+    background-color: var(--color-primary);
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1)
+    forwards;
+}
+
+@keyframes animate {
+    100%{
+        transform: scale(1);
+    }
+}
+
+
+.skills-wrapper .bar .progress-bar span.terraform{
+    width: 90%;
+}
+
+.skills-wrapper .bar .progress-bar span.jenkins{
+    width: 95%;
+}
+
+.skills-wrapper .bar .progress-bar span.python{
+    width: 75%;
+}
+
+.skills-wrapper .bar .progress-bar span.kubernetes/docker{
+    width: 80%;
+}
+
+.skills-wrapper .bar .progress-bar span.ci/cd pipeline{
+    width: 92%;
+}
+
+.skills-wrapper .bar .progress-bar span.github actions{
+    width: 94%;
+}
+
+.skills-wrapper .bar .progress-bar span.linux{
+    width: 80%;
+}
+
+.skills-wrapper .bar .progress-bar span.aws{
+    width: 89%;
+}
